add 3 new pages with query_forms

--- a/query_form1.html
+++ b/query_form1.html
@@ -15,9 +15,9 @@
 	<div class="header">
 		<ul class="ul_li">
            <li> <a href="/"> Главная </a></li>
-           <li> <a href="#"> Создать накладную </a></li>
+           <li> <a href="/"> Создать накладную </a></li>
            <li> <a href="inf_query.html"> Информационные запросы </a></li>
-           <li> <a href="#"> Войти </a></li>
+           <li> <a href="/"> Войти </a></li>
        </ul>
 	</div><!-- .header-->
 
@@ -25,7 +25,12 @@
 
 		<div class="container">
 			<div class="content">
-				<strong>Content:</strong> Sed placerat accumsan ligula. Aliquam felis magna, congue quis, tempus eu, aliquam vitae, ante. Cras neque justo, ultrices at, rhoncus a, facilisis eget, nisl. Quisque vitae pede. Nam et augue. Sed a elit. Ut vel massa. Suspendisse nibh pede, ultrices vitae, ultrices nec, mollis non, nibh. In sit amet pede quis leo vulputate hendrerit. Cras laoreet leo et justo auctor condimentum. Integer id enim. Suspendisse egestas, dui ac egestas mollis, libero orci hendrerit lacus, et malesuada lorem neque ac libero. Morbi tempor pulvinar pede. Donec vel elit.
+             <div class="query_name_form">Сравнение поставок заготовок за период времени</div>
+            <div class="form_name"> Введите период времени </div>
+				<form action="#" method="get">
+                <input type="text" value="20/01/2013 - 20/02/2013 " />
+                <input type="submit" value="Подтвердить" />
+                </form>
 			</div><!-- .content-->
 		</div><!-- .container-->
 
@@ -33,9 +38,9 @@
         <div class="base-date">Базы данных</div>
 			<ul>
            <li> <a href="/"> Накладные </a></li>
-           <li> <a href="#"> Сотрудники </a></li>
-           <li> <a href="#"> Поставщики </a></li>
-           <li> <a href="#"> Заготовки </a></li>
+           <li> <a href="/"> Сотрудники </a></li>
+           <li> <a href="/"> Поставщики </a></li>
+           <li> <a href="/"> Заготовки </a></li>
            
        </ul>
 		</div><!-- .left-sidebar -->
