--- a/inf_query.html
+++ b/inf_query.html
@@ -11,24 +11,26 @@
 <body>
 
 <div class="wrapper">
-
+ 
 	<div class="header">
-		<ul class="ul">
+   
+		<ul class="ul_li">
            <li> <a href="/"> Главная </a></li>
            <li> <a href="#"> Создать накладную </a></li>
            <li> <a href="#"> Информационные запросы </a></li>
            <li> <a href="#"> Войти </a></li>
        </ul>
-	</div><!-- .header-->
 
+
+     	</div><!-- .header-->            
 	<div class="middle">
 
 		<div class="container">
 			<div class="content">
-				<h2>Информационные запросы<h2>
+				<div class="query_name">Информационные запросы</div>
                  <ul class="query">
-                 <li><a href="#">Сравнение поставок заготовок за период времени </a>
-                 <li><a href="#">Поставщик поставляющий самую дешевую заготоку </a>
+                 <li><a href="/query_form1.html">Сравнение поставок заготовок за период времени </a>
+                 <li><a href="/query_form2.html">Поставщик поставляющий самую дешевую заготоку </a>
                  <li><a href="#"> Поставщик поставляющий наибольшее количество заготовок за период времени </a>
                  </ul> 
 			</div><!-- .content-->
