add second query controller and 2 forms for second query

--- a/query_form2.html
+++ b/query_form2.html
@@ -15,9 +15,9 @@
 	<div class="header">
 		<ul class="ul_li">
            <li> <a href="/"> Главная </a></li>
-           <li> <a href="/"> Создать накладную </a></li>
-           <li> <a href="inf_query.html"> Информационные запросы </a></li>
-           <li> <a href="/"> Войти </a></li>
+           <li> <a href="#"> Создать накладную </a></li>
+           <li> <a href="/inf_query.html"> Информационные запросы </a></li>
+           <li> <a href="/loginform.html"> Войти </a></li>
        </ul>
 	</div><!-- .header-->
 
@@ -25,10 +25,11 @@
 
 		<div class="container">
 			<div class="content">
+            
              <div class="query_name_form">Поставщик поставляющий самую дешевую заготовку</div>
             <div class="form_name"> Введите номер заготовки </div>
 				<form action="#" method="get">
-                <input type="text" value="213008 " />
+                <input type="text" name="text_detail" value="213008 " />
                 <input type="submit" value="Подтвердить" />
                 </form>
 			</div><!-- .content-->
