--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title></title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-	<link rel="stylesheet" href="style.css" type="text/css" />
+<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -15,11 +15,11 @@
 	<div class="header">
 		<ul class="ul_li">
            <li> <a href="/"> Главная </a></li>
-           <li> <a href="#"> Создать накладную </a></li>
+           <li> <a href="/"> Создать накладную </a></li>
            <li> <a href="inf_query.html"> Информационные запросы </a></li>
-           <li> <a href="#"> Войти </a></li>
+           <li> <a href="loginform.html"> Войти </a></li>
        </ul>
-	</div><!-- .header-->
+	</div><!--.header-->
 
 	<div class="middle">
 
@@ -33,9 +33,9 @@
         <div class="base-date">Базы данных</div>
 			<ul>
            <li> <a href="/"> Накладные </a></li>
-           <li> <a href="#"> Сотрудники </a></li>
-           <li> <a href="#"> Поставщики </a></li>
-           <li> <a href="#"> Заготовки </a></li>
+           <li> <a href="/"> Сотрудники </a></li>
+           <li> <a href="/"> Поставщики </a></li>
+           <li> <a href="/"> Заготовки </a></li>
            
        </ul>
 		</div><!-- .left-sidebar -->
@@ -43,9 +43,8 @@
 	</div><!-- .middle-->
 
 </div><!-- .wrapper -->
-
-<div class="footer">
-	<strong>Footer:</strong> Mus elit Morbi mus enim lacus at quis Nam eget morbi. Et semper urna urna non at cursus dolor vestibulum neque enim. Tellus interdum at laoreet laoreet lacinia lacinia sed Quisque justo quis. Hendrerit scelerisque lorem elit orci tempor tincidunt enim Phasellus dignissim tincidunt. Nunc vel et Sed nisl Vestibulum odio montes Aliquam volutpat pellentesque. Ut pede sagittis et quis nunc gravida porttitor ligula.<!-- .footer -->
+<div class="footer"> <strong>Footer:</strong> Mus elit Morbi mus enim lacus at quis Nam eget morbi. Et semper urna urna non at cursus dolor vestibulum neque enim. Tellus interdum at laoreet laoreet lacinia lacinia sed Quisque justo quis. Hendrerit scelerisque lorem elit orci tempor tincidunt enim Phasellus dignissim tincidunt. Nunc vel et Sed nisl Vestibulum odio montes Aliquam volutpat pellentesque. Ut pede sagittis et quis nunc gravida porttitor ligula.
+  <!-- .footer -->
 </div>
 </body>
 </html>
