--- a/inf_query.html
+++ b/inf_query.html
@@ -17,8 +17,8 @@
 		<ul class="ul_li">
            <li> <a href="/"> Главная </a></li>
            <li> <a href="#"> Создать накладную </a></li>
-           <li> <a href="#"> Информационные запросы </a></li>
-           <li> <a href="#"> Войти </a></li>
+           <li> <a href="/inf_query.html"> Информационные запросы </a></li>
+           <li> <a href="/loginform.html"> Войти </a></li>
        </ul>
 
 
@@ -30,7 +30,7 @@
 				<div class="query_name">Информационные запросы</div>
                  <ul class="query">
                  <li><a href="/query_form1.html">Сравнение поставок заготовок за период времени </a>
-                 <li><a href="/query_form2.html">Поставщик поставляющий самую дешевую заготоку </a>
+                 <li><a href="/controll_query2.php">Поставщик поставляющий самую дешевую заготоку </a>
                  <li><a href="#"> Поставщик поставляющий наибольшее количество заготовок за период времени </a>
                  </ul> 
 			</div><!-- .content-->
