add new version of base (correct) + release cookie menu + some queries whith pdo sql connection

--- a/inf_query.html
+++ b/inf_query.html
@@ -18,7 +18,8 @@
            <li> <a href="/"> Главная </a></li>
            <li> <a href="#"> Создать накладную </a></li>
            <li> <a href="/inf_query.html"> Информационные запросы </a></li>
-           <li> <a href="/loginform.html"> Войти </a></li>
+           <li> <a href="controll_cookie.php"> Войти </a></li>
+           <li> <a href="controll_cookie_out.php">Выйти </a><li>
        </ul>
 
 
@@ -29,7 +30,7 @@
 			<div class="content">
 				<div class="query_name">Информационные запросы</div>
                  <ul class="query">
-                 <li><a href="/query_form1.html">Сравнение поставок заготовок за период времени </a>
+                 <li><a href="controll_query1.php">Сравнение поставок заготовок за период времени </a>
                  <li><a href="/controll_query2.php">Поставщик поставляющий самую дешевую заготоку </a>
                  <li><a href="#"> Поставщик поставляющий наибольшее количество заготовок за период времени </a>
                  </ul> 
