--- a/login_out.html
+++ b/login_out.html
@@ -24,13 +24,7 @@
   <div class="middle">
     <div class="container">
       <div class="content">
-        <form class="login" action="" method="get">
-          <div class="login_name">Login</div>
-          <input class="text" type="text" name="text_login"/>
-          <div class="password_name">Password</div>
-          <input class="password" type="password" />
-          <input class="button_submit" type="submit" value="Подтвердить" />
-        </form>
+       <div><? echo "Hello,".$_COOKIE['name'];
       </div>
       <!-- .content--> 
     </div>
