add connection with sql server for 2 queries

--- a/inf_query.html
+++ b/inf_query.html
@@ -31,7 +31,7 @@
 				<div class="query_name">Информационные запросы</div>
                  <ul class="query">
                  <li><a href="controll_query1.php">Сравнение поставок заготовок за период времени </a>
-                 <li><a href="/controll_query2.php">Поставщик поставляющий самую дешевую заготоку </a>
+                 <li><a href="controll_query2.php">Поставщик поставляющий самую дешевую заготоку </a>
                  <li><a href="#"> Поставщик поставляющий наибольшее количество заготовок за период времени </a>
                  </ul> 
 			</div><!-- .content-->
