--- a/bd.ru/www/index.html
+++ b/bd.ru/www/index.html
@@ -7,6 +7,8 @@
 <hr>	
 <div align=center>
 <a href="query.html" > Информационные запросы </a>
+<br><br>
+<a href="/main/main.html">Накладная </a>
 </div>
 </body>
 </html>
