--- a/bd.ru/www/main/main.html
+++ b/bd.ru/www/main/main.html
@@ -7,7 +7,10 @@
 <div align=center>
 <a href="/main/create/index.php" >Создание накладной </a>
 <br><br>
-<a href="/main/edit/index.php">Редактирование накладной </a>
+<a href="#">Редактирование накладной </a>
+<!--<a href="/main/edit/index.php">Редактирование накладной </a>-->
+<br><br>
+<a href="../../index.php" > Назад </a>
 </div>
 </body>
 </html>
