--- a/bd.ru/www/index.html
+++ b/bd.ru/www/index.html
@@ -8,7 +8,7 @@
 <div align=center>
 <a href="query.html" > Информационные запросы </a>
 <br><br>
-<a href="/main/main.html">Накладная </a>
+<a href="/naklad/index.html">Накладная </a>
 </div>
 </body>
 </html>
