--- a/bd.ru/www/query.html
+++ b/bd.ru/www/query.html
@@ -9,7 +9,7 @@
 <a href="query/query1/controll_query1.php" > Сравнение поставок заготовок за период времени </a><br><br>
 <a href="query/query2/controll_query2.php" > Поставщик поставляющий самую дешевую заготоку </a><br><br>
 <a href="query/query3/controll_query3.php" > Поставщик поставляющий наибольшее количество заготовок за период времени </a><br><br>
-<a href="index.html"> Назад </a><br><br>
+<a href="index.php"> Назад </a><br><br>
 </div>
 </body>
 </html>
